--- a/tools/make.cfg
+++ b/tools/make.cfg
@@ -10,7 +10,7 @@
 # Project name (with @ symbol)
 # This is used for naming the release files.
 # Default: Current folder name
-project = @tib
+project = @tibe
 
 # Path to project secret key for signing
 # Make sure this isn't in your public repository!
@@ -38,15 +38,15 @@ project = @tib
 
 # This is the folder hierarchy that will be used as prefix inside the PBO.
 # Default: None
-prefix = z\tib\addons
+prefix = z\tibe\addons
 
 # Set the location where the addon source folders (i.e. P:\z\ace\addons)
 # Default: <work_drive>\<prefix>\addons
-module_root = P:\z\tib\addons
+module_root = P:\z\tibe\addons
 
 # Set the location where the optional addon source folders (i.e. P:\z\ace\optionals)
 # Default: <work_drive>\<prefix>\optionals
-optionals_root = P:\z\tib\optionals
+optionals_root = P:\z\tibe\optionals
 
 
 # If the command-line variable test, the addons built will be copied to the following folder.
@@ -56,12 +56,12 @@ optionals_root = P:\z\tib\optionals
 
 # Directory where the built addon will be saved.
 # Default: release
-release_dir = P:\z\tib\release
+release_dir = P:\z\tibe\release
 
 
 # This string will be prefixed to all build PBO file names.
 # Default: None
-pbo_name_prefix = tib_
+pbo_name_prefix = tibe_
 
 # This string will be prefixed to release archive.
 # Default: None
