Added new sign and updated modfiles

--- a/tools/make.cfg
+++ b/tools/make.cfg
@@ -65,7 +65,7 @@ pbo_name_prefix = tibe_
 
 # This string will be prefixed to release archive.
 # Default: None
-zipPrefix = tib
+zipPrefix = TiberiumExtraction
 
 # Which build tool will be used? Options: pboproject, addonbuilder
 # Default: addonbuilder
